# gedit-rememberposition-plugin

./: COPYING  ChangeLog  Makefile.am  README  configure.ac
po/: LINGUAS  POTFILES  POTFILES.in
src/: Makefile.am  godc-plugin.c  godc-plugin.h  godc-provider-file-browser.c  godc-provider-file-browser.h  godc-provider-open-docs.c  godc-provider-open-docs.h  godc-provider-recent.c  godc-provider-recent.h  godc.gedit-plugin.desktop.in  rememberposition-plugin.c  rememberposition-plugin.h  rememberposition.gedit-plugin.desktop.in  rememberposition.plugin.desktop.in.in
tools/: crearprovider.sh
